edited to reflect new repo name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ip-addy-tracker",
+  "name": "ip-finder",
   "version": "0.1.0",
   "homepage": "https://kabocha23.github.io/ip-finder/",
   "private": true,
